tests/miz/fail/parser/fail_parser_formula_nonassoc_iff_001.miz
theorem IffChain: thesis iff contradiction iff thesis;
